plugins {
    id 'java'
    id 'application'
    id 'org.springframework.boot' version '3.3.2'
    id 'io.spring.dependency-management' version '1.1.5'
}

group = 'com.turib.hadidilek'
version = '0.0.1-SNAPSHOT'

java {
    toolchain {
        languageVersion = JavaLanguageVersion.of(17)
    }
}

application {
    mainClass = 'com.turib.hadidilek.poc.ignite.IgniteApplication'
}

//configurations {
//    compileOnly {
//        extendsFrom annotationProcessor
//    }
//}
//
//repositories {
//    mavenCentral()
//}

ext {
    igniteVersion = '2.16.0'
}

dependencies {
    implementation('org.springframework.boot:spring-boot-starter')

    implementation 'org.springframework.boot:spring-boot-starter-web'
    implementation 'org.springdoc:springdoc-openapi-starter-webmvc-ui:2.6.0'

    implementation "org.apache.ignite:ignite-core:${igniteVersion}"
    implementation "org.apache.ignite:ignite-spring:${igniteVersion}"
    implementation "org.apache.ignite:ignite-slf4j:${igniteVersion}"
    implementation ("org.apache.ignite:ignite-indexing:${igniteVersion}")  {
        exclude group: "com.h2database", module: "h2"
    }

    runtimeOnly "com.h2database:h2:1.4.197"

    testImplementation 'org.springframework.boot:spring-boot-starter-test'
    testRuntimeOnly 'org.junit.platform:junit-platform-launcher'
}

//configurations.all {
//    resolutionStrategy {
//        force "com.h2database:h2:1.4.197"
//    }
//}

tasks.named('test') {
    useJUnitPlatform()
}

tasks.named('bootRun') {
    jvmArgs += [
            '--add-opens=java.base/java.lang=ALL-UNNAMED',
            '--add-opens=java.base/java.util=ALL-UNNAMED',
            '--add-opens=java.base/java.nio=ALL-UNNAMED',
            '--add-opens=java.base/sun.nio.ch=ALL-UNNAMED',
    ]
}

tasks.withType(JavaExec).configureEach {
    jvmArgs += [
            '--add-opens=java.base/java.lang=ALL-UNNAMED',
            '--add-opens=java.base/java.util=ALL-UNNAMED',
            '--add-opens=java.base/java.nio=ALL-UNNAMED',
            '--add-opens=java.base/sun.nio.ch=ALL-UNNAMED',
    ]
}

bootJar {
    archiveBaseName = 'ignite'
    archiveVersion = '0.0.1-SNAPSHOT'
}
